commit met data validatie

--- a/src/main/resources/teksten_en.properties
+++ b/src/main/resources/teksten_en.properties
@@ -1,1 +1,5 @@
 aantalFilialen={0} branches
+required=required field
+typeMismatch.java.lang.Integer=enter a number
+typeMismatch.java.time.LocalDate=enter a date
+typeMismatch.java.math.BigDecimal=enter an amount
