commit met sessions, validations en indexed properties

--- a/src/main/resources/teksten_en.properties
+++ b/src/main/resources/teksten_en.properties
@@ -3,3 +3,24 @@ required=required field
 typeMismatch.java.lang.Integer=enter a number
 typeMismatch.java.time.LocalDate=enter a date
 typeMismatch.java.math.BigDecimal=enter an amount
+javax.validation.constraints.Null.message=must be empty 
+javax.validation.constraints.NotNull.message=must not be empty 
+javax.validation.constraints.Min.message=minimum {value} 
+javax.validation.constraints.DecimalMin.message=minimum {value} 
+javax.validation.constraints.Max.message=maximum {value} 
+javax.validation.constraints.DecimalMax.message=maximum {value} 
+javax.validation.constraints.Size.message=between {min} and {max} 
+javax.validation.constraints.Digits.message=max. {integer} before and {fraction} after decimal 
+javax.validation.constraints.Past.message=must be in the past 
+javax.validation.constraints.Future.message=must be in the future 
+javax.validation.constraints.Pattern.message=must satisfy the pattern {regexp} 
+org.hibernate.validator.constraints.CreditCardNumber.message=invalid credit card number 
+org.hibernate.validator.constraints.Email.message=invalid email address 
+org.hibernate.validator.constraints.Length.message=minimum {min} / maximum {max} characters 
+org.hibernate.validator.constraints.NotBlank.message=must contain more than just spaces 
+org.hibernate.validator.constraints.Range.message=must be between {min} and {max}
+geenFilialen=no branches found
+be.vdab.constraints.Postcode=postcode must be between 1000 and 9999
+be.vdab.constraints.VanKleinerDanOfGelijkAanTot=from should be less than or equal to to 
+org.hibernate.validator.constraints.SafeHtml.message=must not contain a script 
+minstensEenGazonType=choose at least one lawn type
